[package]
name = "esi"
version = "0.1.3"
description = "A barebones implementation of Edge Side Includes"
repository = "https://github.com/kailan/esi"
license = "MIT"
authors = ["Kailan Blanks <kailan@enviark.com>"]
edition = "2018"
readme = "../README.md"

[dependencies]
lazy_static = "^1.4"
fancy-regex = "^0.5"
