[package]
name = "esi"
version = "0.2.0-pre"
description = "A barebones implementation of Edge Side Includes"
repository = "https://github.com/kailan/esi"
license = "MIT"
authors = ["Kailan Blanks <kailan@enviark.com>"]
edition = "2018"
readme = "../README.md"

[dependencies]
quick-xml = "^0.22"
thiserror = "^1.0"
http-types = { version = "^2.12", default-features = false }
async-trait = "^0.1"
futures = "^0.3"
tokio = { version = "1.17", features = ["sync"] }
