[package]
name = "esi"
version = "0.2.0-pre"
description = "A streaming parser and executor for Edge Side Includes"
repository = "https://github.com/kailan/esi"
license = "MIT"
authors = ["Kailan Blanks <kailan@enviark.com>"]
edition = "2018"
readme = "../README.md"

[dependencies]
quick-xml = "^0.22"
thiserror = "^1.0"
fastly = "^0.8"
log = "^0.4"