[package]
name = "esi_fastly"
version = "0.1.2"
description = "A Fastly Compute@Edge interface for the esi crate"
repository = "https://github.com/kailan/esi"
license = "MIT"
authors = ["Kailan Blanks <kailan@enviark.com>"]
edition = "2018"

[dependencies]
fastly = "^0.7"
esi = { path = "../esi", version = "^0.1" }
