[package]
name = "esi_fastly"
version = "0.2.0-pre"
description = "A Fastly Compute@Edge interface for the esi crate"
repository = "https://github.com/kailan/esi"
license = "MIT"
authors = ["Kailan Blanks <kailan@enviark.com>"]
edition = "2018"
readme = "../README.md"

[dependencies]
fastly = "^0.8"
esi = { path = "../esi", version = "0.2.0-pre" }
