[package]
name = "esi_fastly"
version = "0.2.0-pre"
description = "A Fastly Compute@Edge interface for the esi crate"
repository = "https://github.com/kailan/esi"
license = "MIT"
authors = ["Kailan Blanks <kailan@enviark.com>"]
edition = "2018"
readme = "../README.md"

[dependencies]
quick-xml = "^0.22"
http-types = { version = "^2.12", default-features = false }
fastly = "^0.8"
esi = { path = "../esi", version = "0.2.0-pre" }
