[package]
name = "esi_hyper"
version = "0.2.0-pre"
description = "A hyper interface for the esi crate"
repository = "https://github.com/kailan/esi"
license = "MIT"
authors = ["Kailan Blanks <kailan@enviark.com>"]
edition = "2018"
readme = "../README.md"

[dependencies]
quick-xml = "^0.22"
hyper = { version = "^0.14", features = ["http1", "http2", "client", "server"] }
esi = { path = "../esi", version = "0.2.0-pre" }
futures = "^0.3"